# advent-of-code

./: README.md
2015/: day01.ml  day02.ml  day03.ml  day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  dune  dune-project
2015/day1/: README.md
2015/day1/lib/: dune
2015/day1/test/: day1_test.ml  dune
2015/day2/: README.md
2015/day2/test/: day2_test.ml  dune
2015/day3/: README.md
2015/day3/lib/: dune
2015/day3/test/: day3_test.ml  dune
2015/day4/: README.md
2015/day4/lib/: day4.ml  dune
2015/day4/test/: day4_test.ml  dune
2015/day5/: README.md  gleam.toml
2015/day5/lib/: day5.ml  dune
2015/day5/src/: day5.gleam  part1.gleam  part2.gleam
2015/day5/test/: day5_test.ml  dune  part1_test.gleam  part2_test.gleam
2015/day6/lib/: day6.ml  dune
2015/day6/test/: day6_test.ml  dune
2015/lib/: day01_lib.ml  day02_lib.ml  day04_lib.ml  day3_lib.ml  day6_lib.ml  dune
2015/test/: day01_test.ml  day02_test.ml  day03_test.ml  day04_test.ml  day1_test.ml  day2_test.ml  day3_test.ml  day4_test.ml  day5_test.ml  day6_test.ml  dune
Y2023/: dune-project
Y2023/lib/: advent.ml
Y2023/test/: dune
util/: dune-project
util/lib/: dune  util.ml
util/test/: dune  test_util.ml  util_test.ml
y2016/: .gitignore  dune-project
y2016/day1part1/: dune  main.ml
y2016/lib/: advent.ml  dune
