(executable
 (name day01)
 (public_name day01)
 (modules Day01)
 (libraries core day01_lib))

(executable
 (name day02)
 (public_name day02)
 (modules Day02)
 (libraries core day02_lib))

(executable
 (name day03)
 (public_name day03)
 (modules Day03)
 (libraries core day03_lib))

(executable
 (name day04)
 (public_name day04)
 (modules Day04)
 (libraries core day04_lib))

