(library
  (name day1_lib)
  (modules Day1_lib)
  (libraries core))

(library
  (name day2_lib)
  (modules Day2_lib)
  (libraries core))

(library
  (name day3_lib)
  (modules Day3_lib)
  (libraries core))

(library
  (name day4_lib)
  (modules Day4_lib)
  (libraries core cryptokit))

(library
  (name day5_lib)
  (modules Day5_lib)
  (libraries core))

(library
  (name day6_lib)
  (modules Day6_lib)
  (libraries core))
