(library
  (name day1_test)
  (inline_tests)
  (modules Day1_test)
  (libraries core util day1_lib)
  (preprocess (pps ppx_expect)))

(library
  (name day2_test)
  (inline_tests)
  (modules Day2_test)
  (libraries core util day2_lib)
  (preprocess (pps ppx_expect)))

(library
  (name day3_test)
  (inline_tests)
  (modules Day3_test)
  (libraries core util day3_lib)
  (preprocess (pps ppx_expect)))

(library
  (name day4_test)
  (inline_tests)
  (modules Day4_test)
  (libraries core util day4_lib)
  (preprocess (pps ppx_expect)))

(library
  (name day5_test)
  (inline_tests)
  (modules Day5_test)
  (libraries core util day5_lib) 
  (preprocess (pps ppx_expect)))

